--- a/tm/src/main/resources/application.properties
+++ b/tm/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:mysql://localhost:3307/runtimeterror?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=titi
+spring.jpa.hibernate.ddl-auto=create
 
