--- a/tm/pom.xml
+++ b/tm/pom.xml
@@ -70,7 +70,13 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>junit</groupId>
+     <artifactId>junit</artifactId>
+     <version>4.12</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
