--- a/tm/src/main/resources/application.properties
+++ b/tm/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3307/runtimeterror?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/runtimeterror?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=titi
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
 
